# pedantic-validator-framework

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  tox.ini
.github/workflows/: coverage.yml  formatting.yml  packaging_test.yml  python-publish.yml  pythonlint.yml  unittests.yml
dev_requirements/: requirements-coverage.txt  requirements-formatting.txt  requirements-linting.txt  requirements-tests.in  requirements-tests.txt  requirements-type_check.in  requirements-type_check.txt
src/pvframework/: __init__.py  analysis.py  errors.py  execution.py  types.py  validator.py
src/pvframework/core/: __init__.py  errors.py  execution.py  validator.py
src/pvframework/mapped_validators/: __init__.py  path_map.py  query_map.py  query_parallel_map.py
src/pvframework/utils/: __init__.py  frame_functions.py  query_object.py
unittests/: .pylintrc  test_complex_examples.py  test_validation.py
