[project]
name = "pvframework"
description = "This framework enables to easily create validation functions (both sync or async) and managers to easily apply this validation logic onto arbitrary object structures."
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info@hochfrequenz.de" }]
keywords = ["python", "validation", "structures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [     # add all the dependencies from requirements.in here, too
    "bidict",
    "frozendict",
    "networkx",
    "typeguard",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
coverage = [
    "coverage==7.6.7"
]
formatting = [
    "black==24.10.0",
    "isort==5.13.2"
]
linting = [
    "pylint==3.2.7"
]
spellcheck = [
    "codespell==2.3.0"
]
test_packaging = [
    "build==1.2.2.post1",
    "twine==5.1.1"
]
tests = [
    "pydantic==2.10.1",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0"
]
type_check = [
    "mypy==1.13.0",
    "networkx-stubs==0.0.1",
    "types-frozendict==2.0.9"
]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/pedantic-validator-framework/releases"
Homepage = "https://github.com/Hochfrequenz/pedantic-validator-framework"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable="too-few-public-methods"

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"



[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_pvframework_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
# When the mode is auto, all discovered async tests are considered asyncio-driven
# even if they have no @pytest.mark.asyncio marker.
# https://github.com/pytest-dev/pytest-asyncio#auto-mode
asyncio_mode = "auto"
